--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,7 +11,28 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
-
+    <table th:each="job : ${jobs}" class="job-listing">
+        <thead>
+            <tr>
+                <th th:text="${job.name}"></th>
+            </tr>
+        </thead>
+            <tr>
+                <td th:text="'ID: ' + ${job.id}"></td>
+            </tr>
+            <tr>
+                <td th:text="'Employer: ' + ${job.employer}"></td>
+            </tr>
+            <tr>
+                <td th:text="'Location: ' + ${job.location}"></td>
+            </tr>
+            <tr>
+                <td th:text="'Position Type: ' + ${job.positionType}"></td>
+            </tr>
+            <tr>
+                <td th:text="'Core Competency: ' + ${job.coreCompetency}"></td>
+            </tr>
+    </table>
 </div>
 
 </body>
