--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -27,5 +27,30 @@
         </div>
     </div>
 
+    <div th:fragment="job-table">
+        <table th:each="job : ${jobs}" class="job-listing">
+            <thead>
+            <tr>
+                <th th:text="${job.name}"></th>
+            </tr>
+            </thead>
+            <tr>
+                <td th:text="'ID: ' + ${job.id}"></td>
+            </tr>
+            <tr>
+                <td th:text="'Employer: ' + ${job.employer}"></td>
+            </tr>
+            <tr>
+                <td th:text="'Location: ' + ${job.location}"></td>
+            </tr>
+            <tr>
+                <td th:text="'Position Type: ' + ${job.positionType}"></td>
+            </tr>
+            <tr>
+                <td th:text="'Core Competency: ' + ${job.coreCompetency}"></td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 </html>
